# bee-lang

./: .clang-format  .dir-locals.el  CMakeLists.txt  README.md
examples/: add.bee  for.bee  function.bee  procedure.bee  regs.bee  scope.bee  struct.bee
src/bee/: CMakeLists.txt  arena.hpp  ast.cpp  ast.hpp  ast_dump.cpp  ast_dump.hpp  bee_error.hpp  bitset.hpp  core.hpp  entity.hpp  error.hpp  escape_sequence.cpp  escape_sequence.hpp  expr.cpp  expr.hpp  frame.cpp  frame.hpp  function.cpp  function.hpp  fwd.hpp  parser.cpp  parser.hpp  register.hpp  register_system.cpp  register_system.hpp  scanner.cpp  scanner.hpp  stream.hpp  struct.hpp  token.hpp  type.cpp  type.hpp  type_system.cpp  type_system.hpp  var.hpp
src/bee/asm/: asm.hpp  asm_x86.hpp
src/bee/bytecode/: #bytecode.cpp#  .#bytecode.cpp  bytecode.cpp  bytecode.hpp  instruction.hpp  object.hpp
src/bee/regex/: format.cpp  format.hpp  match.cpp  match.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  regex.hpp  state.cpp  state.hpp
src/bee/vm/: #vm.cpp#  object.hpp  vm.cpp  vm.hpp
src/cmd/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  main.cpp  regex_test.hpp  scanner_test.hpp
